<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:background="@drawable/bg_degrade"
    tools:context=".user.ui.fragments.UserSigninFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="16dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent">

            <androidx.core.widget.NestedScrollView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:fillViewport="true">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="150dp"
                        android:layout_gravity="center_horizontal"
                        android:src="@drawable/logo"
                        android:scaleType="fitCenter"
                        android:layout_marginBottom="25dp"
                        />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/frag_user_signin_tv_email"
                        android:layout_marginBottom="6dp"
                        />

                    <EditText
                        android:id="@+id/edt_email"
                        android:layout_width="match_parent"
                        android:layout_height="50dp"
                        android:inputType="textEmailAddress"
                        android:lines="1"
                        style="@style/AppTheme.EditText.Light"

                        />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/frag_user_signin_tv_password"
                        android:layout_marginTop="15dp"
                        android:layout_marginBottom="5dp"
                        />

                    <EditText
                        android:id="@+id/edt_passw"
                        android:layout_width="match_parent"
                        android:layout_height="50dp"
                        android:inputType="textPassword"
                        android:lines="1"
                        style="@style/AppTheme.EditText.Light"
                        />

                    <TextView
                        android:id="@+id/tv_open_reset_passw"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="center_horizontal"
                        android:text="@string/frag_user_signin_tv_reset_password"
                        android:layout_marginTop="5dp"
                        android:layout_marginBottom="5dp"
                        android:layout_gravity="right|end"
                        />

                    <Button
                        android:id="@+id/btn_signin"
                        android:layout_width="match_parent"
                        android:layout_height="50dp"
                        android:layout_marginTop="25dp"
                        android:text="@string/btn_signin"
                        style="@style/AppTheme.Button.Light"
                        />

                    <TextView
                        android:id="@+id/tv_open_signup"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center_horizontal"
                        android:text="@string/frag_user_signin_tv_register"
                        android:layout_marginTop="15dp"
                        android:layout_marginBottom="15dp"/>

                </LinearLayout>
            </androidx.core.widget.NestedScrollView>
        </LinearLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</FrameLayout>